# dg

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLE-CLAUDE.md  FEEDBACK.md  LICENSE  OBJECTIVE.md  README.md  REVIEW-2.md  REVIEW.md  SPEC.md  SUPPORTED-DOCS.md  TEST.md  devenv-module.nix  devenv.nix  feedback-on-document-viewing.md  feedback-on-editor.md  flake.nix  sample-page.html  tailwind.config.js
.claude/hooks/: post-chat.md  session-start.py  session-stop.py
.claude/skills/: decision-graph.md
.github/workflows/: ci.yml  finalize-drafts.yml
docs/: .authors.yaml  FORMAT.md  dg.toml  graph.dot
docs/.decisions/: CUS-001-acme-corp.md  DEC-001-expand-to-france-before-germany.md  DEC-002-expand-to-sweden.md  DEC-004-switch-to-revolut-for-sek-banking.md  OPP-001-mobile-app-feature-gap.md  POL-001-data-retention-policy.md  PRC-001-customer-onboarding.md  STR-001-european-market-expansion-2024.md  STR-002-nordic-market-expansion.md
docs/.templates/: adr.md  customer.md  decision.md  feedback.md  (+9 more)
research/: 7-POWERS.md  CO-FOUNDER.md  DATA-FORMATS.md  DEPENDENCY.md  GRAPHS.md  MEETING-NOTES.md  SILICON-VALLEY.md  architecting-causal-graph.md  cli-tool-options.md  codesearch-for-adr-impact.md  cognitive-frameworks-for-decision-support-system.md  competitors.md  feedback.md  feedback_html.md  llm-cli-tools-usage.md  llm-dynamic-agentic-memory-architectures.md  notion-like-ui.md  product-owner-skills.md  story-of-microsoft.md  terminal-output.md
src/: lock.rs  main.rs  templates.rs
test-folder/: CLAUDE.md  dg
tests/: integration_tests.rs  web_integration_tests.rs
(+187 files in other folders)
