[package]
name = "dgraph"
version = "0.1.0"
edition = "2021"
description = "Text-based knowledge graph for company-level decision making"
license = "MIT"
repository = "https://github.com/onnimonni/structured-claude"

[[bin]]
name = "dg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
colored = "2"
thiserror = "1"
anyhow = "1"
fs2 = "0.4"
which = "7"
axum = { version = "0.8", features = ["tokio"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }
minijinja = "2"
rust-embed = "8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
